--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <footer>
     <div class="network-container">
       <ul>
-        <li><a href="https://play.google.com/store/apps/details?id=network.bee.app&hl=en_US&gl=US"><img src="/images/ruche.png" alt="">Join us !</a></li>
-        <li><a href="https://www.bleu-blanc-ruche.fr"><img src="/images/honey.png" alt="">Our honey, your money</a></li>
+        <li><a href="https://play.google.com/store/apps/details?id=network.bee.app&hl=en_US&gl=US"><img src="images/ruche.png" alt="">Join us !</a></li>
+        <li><a href="https://www.bleu-blanc-ruche.fr"><img src="images/honey.png" alt="">Our honey, your money</a></li>
       </ul>
     </div>
   </footer>
